Added code to to make switch case work in netbeans